--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
@@ -20,10 +20,21 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    versions = [
+            components: [
+                    ktx       : "1.2.0",
+                    appcompat : "1.1.0",
+                    material  : "1.0.0",
+                    constraint: "2.0.0-beta4"
+            ]
+    ]
 }
