--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ ext {
                     appcompat : "1.1.0",
                     material  : "1.0.0",
                     constraint: "2.0.0-beta4"
-            ]
+            ],
+            exoplayer : "2.8.1"
     ]
 }
