Add media dependency.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$versions.components.appcompat"
     implementation "androidx.core:core-ktx:$versions.components.ktx"
     implementation "androidx.constraintlayout:constraintlayout:$versions.components.constraint"
+    implementation "androidx.media:media:$versions.components.media"
 
     // ExoPlayer
     implementation 'com.google.android.exoplayer:exoplayer:' + versions.exoplayer
